# VL_uBMK

./: .gitignore  CMakeLists.txt  Makefile  README.md  affinity.hpp  pingpong.cpp  pingpong.cpp.BAK
apps/: CMakeLists.txt
apps/armq_demo/: CMakeLists.txt  armq_demo.cpp  armq_demo.hpp  hint_demo.cpp
apps/bitonic/: CMakeLists.txt  bitonic.cpp  boost.cpp  seq.cpp  utils.hpp  vl.cpp  zmq.cpp
apps/echo/: CMakeLists.txt  echo.cpp
apps/ember/: CMakeLists.txt  ember.cpp  rl_ember.cpp
apps/fdtd/: CMakeLists.txt  kernels.cpp
apps/fir/: CMakeLists.txt  fir.cpp  rl_fir.cpp
apps/fluidanimate/: CMakeLists.txt  cellpool.hpp  fluid.hpp  fluidcmp.hpp  fluidview.hpp  raftlib_src.cpp  raftlib_src.hpp
apps/graphBIG/: CMakeLists.txt  bench_bc.cpp  bench_dc.cpp  bench_tc.cpp  rl_bc.cpp  rl_dc.cpp  rl_tc.cpp
apps/latency/: CMakeLists.txt  latency.c
apps/lockhammer/: CMakeLists.txt  lockhammer.c
apps/lockhammer/include/: atomics.h  vlink_lock.h
apps/lockhammer/include/linux/: lk_atomics.h
apps/max_sce/: CMakeLists.txt  max_sce.c
apps/max_vl/: CMakeLists.txt  max_vl.cpp
apps/network/: CMakeLists.txt  firewall.cpp  pipeline.cpp  rl_firewall.cpp  rl_pipeline.cpp  utils.hpp
apps/pingpong/: CMakeLists.txt  pingpong.cpp
apps/poisson_solver/: CMakeLists.txt  PoissonMain.cpp  _2DGrid.cpp  _2DParallelGaussSeidelRedBlack.cpp  _2DParallelGaussSeidelRedBlack.hpp  _2DParallelJacobi.cpp  _2DParallelJacobi.hpp  _2DPoissonEquation.cpp
apps/resizing/: CMakeLists.txt  resizing.cpp
apps/search/: CMakeLists.txt  bmh.cpp
apps/shopping/: CMakeLists.txt  shopping.c
apps/shuffler/: shuffler.cpp
apps/stream/: stream.c
apps/streamcluster/: CMakeLists.txt  kernels.hpp  main.cpp  raftlib_src.cpp  raftlib_src.hpp
cmake/: CheckSTD.cmake  FindNuma.cmake  FindQThread.cmake  FindRaftLib.cmake  FindUT.cmake  FindVL.cmake  FindZmq.cmake
include/: affinity.h  check.h  raftlib_orig.hpp  threading.h  timing.h
pingpong/: Makefile  affinity.cpp
scripts/: CLX.cfg  SKX.cfg  dvfs.sh  jupiter1.cfg  ns_and_peak.sh  perf_shopping.slurm  tab_shopping.py  tick_and_peak.sh
scripts/DynamoRIO/: armq_trace.example.json  get_DynamoRIO.sh  json2svg.py  trace2json.py
shopping/: Makefile  shopping.c  skx_tests.config
src/: CMakeLists.txt  affinity.c  profiling.c  threading.c  timing.c
src/DynamoRIO/: armq_trace.c  readtrace.c
src/phish/: phish-bait-zmq.cpp
